feat: add /oauth/** path to API gateway routing

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
        - id: deudas-microservice
          uri: lb://DEUDAS-MICROSERVICE
          predicates:
-           - Path=/api/deudas/**, /api/categorias-gasto/**
+           - Path=/api/deudas/**, /api/categorias-gasto/**,/oauth/**
 
     loadbalancer:
       ribbon:
